data/derived/fa15/progs/unify/prog0652.ml.out
Characters 26-30:
  let _ = List.mem( 4, [] ) test;;
                            ^^^^
Error: This expression has type int list
       but an expression was expected of type (int * 'a list) list
       Type int is not compatible with type int * 'a list 
